--- a/comercios.html
+++ b/comercios.html
@@ -109,7 +109,7 @@ Para mayor información acerca de espacios disponibles, contáctenos al +505 894
                       <p>Módulos comerciales desde 40 m² de área rentable, vistas panorámicas, parqueos en el entorno inmediato de los módulos.</p>
                     </div>
                   </div>
-                </div><img class="img-responsive" src="images/nosotros_568x338.jpg" alt="" width="569" height="169"/>
+                </div><img class="img-responsive" src="images/comercio_568x338.jpg" alt="" width="569" height="169"/>
               </div>
             </div>
           </div>
@@ -120,7 +120,7 @@ Para mayor información acerca de espacios disponibles, contáctenos al +505 894
       <footer class="section footer-classic">
       <div class="footer-inner-2">
           <div class="container">
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Diseñado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Desarrollado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
           </div>
         </div>
       </footer>
