--- a/contactos.html
+++ b/contactos.html
@@ -98,18 +98,12 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <div class="group-item">
                   <dl class="list-terms-2">
                     <dt>Teléfono:</dt>
-                    <dd><a href="tel:#">+(505) 1234 1234</a></dd>
+                    <dd><a href="tel:+(505) 8941 5700">+(505) 8941 5700</a></dd>
                   </dl>
                   <dl class="list-terms-2">
-                    <dt>Fax:</dt>
-                    <dd><a href="tel:#">+(505) 1234 1234</a></dd>
-                  </dl><a class="d-inline-block font-weight-bold big link-underline" href="mailto:#">cuenta_correo@email.com</a>
-                </div>
-                <div class="group-item">
-                  <ul class="list list-0">
-                    <li class="text-secondary">Rotonda Universitaria <br>300 vrs Sur, <br>Pista Sub Urbana</li>
-                    <li>Lunes a viernes: 8:00 AM - 5:00 PM</li>
-                  </ul>
+                    <dt>email:</dt>
+                    <dd><a  href="mailto:ventas@infodesarrollos.com">ventas@infodesarrollos.com</a></dd>
+                  </dl>
                 </div>
               </div>
               <!--Please, add the data attribute data-key="YOUR_API_KEY" in order to insert your own API key for the Google map.-->
@@ -129,13 +123,13 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <div class="row row-10">
                   <div class="col-md-6">
                     <div class="form-wrap">
-                      <input class="form-input" id="contact-first-name" type="text" name="name" data-constraints="@Required">
+                      <input class="form-input" id="contact-first-name" type="text" name="nombre" data-constraints="@Required">
                       <label class="form-label" for="contact-first-name">Nombre</label>
                     </div>
                   </div>
                   <div class="col-md-6">
                     <div class="form-wrap">
-                      <input class="form-input" id="contact-last-name" type="text" name="name" data-constraints="@Required">
+                      <input class="form-input" id="contact-last-name" type="text" name="apellido" data-constraints="@Required">
                       <label class="form-label" for="contact-last-name">Apellido</label>
                     </div>
                   </div>
@@ -163,7 +157,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
       <footer class="section footer-classic">
       <div class="footer-inner-2">
           <div class="container">
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Diseñado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Desarrollado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
           </div>
         </div>
       </footer>
