--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
         
         <div class="footer-inner-2">
           <div class="container">
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Diseñado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Desarrollado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
           </div>
         </div>
       </footer>
