--- a/nosotros.html
+++ b/nosotros.html
@@ -164,7 +164,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
         </div>
       </section>
       <!-- Our Team-->
-      <section class="section section-lg bg-default">
+      <!-- <section class="section section-lg bg-default">
         <div class="container text-center text-lg-left">
           <h2><span class="text-light">Nuestro</span> Equipo</h2>
           <div class="row row-40">
@@ -208,11 +208,11 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
               </div>
             </div>
         </div>
-      </section>
+      </section> -->
       <footer class="section footer-classic">
       <div class="footer-inner-2">
           <div class="container">
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Diseñado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Desarrollado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
           </div>
         </div>
       </footer>
