--- a/oficinas.html
+++ b/oficinas.html
@@ -108,7 +108,7 @@ Para mayor información acerca de espacios disponibles, contáctenos al +505 894
                       <p>Oficinas desde 141.00m² de área rentable, vistas panorámicas, parqueos en semisótano con sistema de elevador.</p>
                     </div>
                   </div>
-                </div><img class="img-responsive" src="images/nosotros_568x338.jpg" alt="" width="569" height="169"/>
+                </div><img class="img-responsive" src="images/oficinas_568x338.jpg" alt="" width="569" height="169"/>
               </div>
             </div>
           </div>
@@ -117,7 +117,7 @@ Para mayor información acerca de espacios disponibles, contáctenos al +505 894
       <footer class="section footer-classic">
       <div class="footer-inner-2">
           <div class="container">
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Diseñado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Desarrollado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
           </div>
         </div>
       </footer>
