--- a/desarrollo.html
+++ b/desarrollo.html
@@ -182,6 +182,49 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
            	<a href="#30">
            		<img src="images/eops1_2/30.jpg" alt="">
            	</a>
+            <a href="#30">
+              <img src="images/eops1_2/30.jpg" alt="">
+            </a>
+            <a href="#31">
+              <img src="images/eops1_2/31.jpg" alt="">
+            </a>
+            <a href="#32">
+              <img src="images/eops1_2/32.jpg" alt="">
+            </a>
+            <a href="#33">
+              <img src="images/eops1_2/33.jpg" alt="">
+            </a>
+            <a href="#34">
+              <img src="images/eops1_2/34.jpg" alt="">
+            </a>
+            <a href="#35">
+              <img src="images/eops1_2/35.jpg" alt="">
+            </a>
+            <a href="#36">
+              <img src="images/eops1_2/36.jpg" alt="">
+            </a>
+            <a href="#37">
+              <img src="images/eops1_2/37.jpg" alt="">
+            </a>
+            <a href="#38">
+              <img src="images/eops1_2/38.jpg" alt="">
+            </a>
+            <a href="#39">
+              <img src="images/eops1_2/39.jpg" alt="">
+            </a>
+            <a href="#40">
+              <img src="images/eops1_2/40.jpg" alt="">
+            </a>
+            <a href="#41">
+              <img src="images/eops1_2/41.jpg" alt="">
+            </a>
+            <a href="#42">
+              <img src="images/eops1_2/42.jpg" alt="">
+            </a>
+            <a href="#43">
+              <img src="images/eops1_2/43.jpg" alt="">
+            </a>
+            
         </section>
         <article class="light-box" id="1">
         	<a href="#30" class="back"><i class="icon_back"></i></a>
@@ -195,180 +238,258 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
         	<a href="#3" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-         <article class="light-box" id="3">
+        <article class="light-box" id="3">
         	<a href="#2" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/3.jpg" alt="">
         	<a href="#4" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="4">
+        <article class="light-box" id="4">
         	<a href="#3" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/4.jpg" alt="">
         	<a href="#5" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="5">
+        <article class="light-box" id="5">
         	<a href="#4" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/5.jpg" alt="">
         	<a href="#6" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="6">
+        <article class="light-box" id="6">
         	<a href="#5" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/6.jpg" alt="">
         	<a href="#7" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="7">
+        <article class="light-box" id="7">
         	<a href="#6" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/7.jpg" alt="">
         	<a href="#8" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="8">
+        <article class="light-box" id="8">
         	<a href="#7" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/8.jpg" alt="">
         	<a href="#9" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="9">
+        <article class="light-box" id="9">
         	<a href="#8" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/9.jpg" alt="">
         	<a href="#10" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="10">
+        <article class="light-box" id="10">
         	<a href="#9" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/10.jpg" alt="">
         	<a href="#11" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="11">
+        <article class="light-box" id="11">
         	<a href="#10" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/11.jpg" alt="">
         	<a href="#12" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="12">
+        <article class="light-box" id="12">
         	<a href="#11" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/12.jpg" alt="">
         	<a href="#13" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="13">
+        <article class="light-box" id="13">
         	<a href="#12" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/13.jpg" alt="">
         	<a href="#14" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="14">
+        <article class="light-box" id="14">
         	<a href="#13" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/14.jpg" alt="">
         	<a href="#15" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="15">
+        <article class="light-box" id="15">
         	<a href="#14" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/15.jpg" alt="">
         	<a href="#16" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="16">
+        <article class="light-box" id="16">
         	<a href="#15" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/16.jpg" alt="">
         	<a href="#17" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="17">
+        <article class="light-box" id="17">
         	<a href="#16" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/17.jpg" alt="">
         	<a href="#18" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="18">
+        <article class="light-box" id="18">
         	<a href="#17" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/18.jpg" alt="">
         	<a href="#19" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="19">
+        <article class="light-box" id="19">
         	<a href="#18" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/19.jpg" alt="">
         	<a href="#20" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="20">
+        <article class="light-box" id="20">
         	<a href="#19" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/20.jpg" alt="">
         	<a href="#21" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="21">
+        <article class="light-box" id="21">
         	<a href="#20" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/21.jpg" alt="">
         	<a href="#22" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="22">
+        <article class="light-box" id="22">
         	<a href="#21" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/22.jpg" alt="">
         	<a href="#23" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="23">
+        <article class="light-box" id="23">
         	<a href="#22" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/23.jpg" alt="">
         	<a href="#24" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="24">
+        <article class="light-box" id="24">
         	<a href="#23" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/24.jpg" alt="">
         	<a href="#25" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="25">
+        <article class="light-box" id="25">
         	<a href="#24" class="back"><i class="25"></i></a>
         		<img src="images/eops1_2/frente_derecho_3.jpg" alt="">
         	<a href="#26" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="26">
+        <article class="light-box" id="26">
         	<a href="#25" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/26.jpg" alt="">
         	<a href="#27" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="27">
+        <article class="light-box" id="27">
         	<a href="#26" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/27.jpg" alt="">
         	<a href="#28" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="28">
+        <article class="light-box" id="28">
         	<a href="#27" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/28.jpg" alt="">
         	<a href="#29" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="29">
+        <article class="light-box" id="29">
         	<a href="#28" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/29.jpg" alt="">
         	<a href="#30" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
         </article>
-          <article class="light-box" id="30">
+        <article class="light-box" id="30">
         	<a href="#29" class="back"><i class="icon_back"></i></a>
         		<img src="images/eops1_2/30.jpg" alt="">
-        	<a href="#1" class="next"><i class="icon_next"></i></a>
+        	<a href="#31" class="next"><i class="icon_next"></i></a>
         	<a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="31">
+          <a href="#30" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#32" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="32">
+          <a href="#31" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#33" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="33">
+          <a href="#32" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#34" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="34">
+          <a href="#33" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#35" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="35">
+          <a href="#34" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#36" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="36">
+          <a href="#35" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#37" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="37">
+          <a href="#36" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#38" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="38">
+          <a href="#37" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#39" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="39">
+          <a href="#38" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#40" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="40">
+          <a href="#39" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#41" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="41">
+          <a href="#40" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#42" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="42">
+          <a href="#41" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#43" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
+        </article>
+        <article class="light-box" id="43">
+          <a href="#42" class="back"><i class="icon_back"></i></a>
+            <img src="images/eops1_2/30.jpg" alt="">
+          <a href="#1" class="next"><i class="icon_next"></i></a>
+          <a href="#" class="close">X</a>
         </article>
       </section>
       
       <footer class="section footer-classic">
       <div class="footer-inner-2">
           <div class="container">
-            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Diseñado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
+            <p class="rights"><span>&copy;&nbsp;</span><span class="copyright-year"></span>. Todos los derechos reservados. Desarrollado por <a href="https://www.facebook.com/CNSGMC">ClickNicarqgua Soluciones</a></p>
           </div>
         </div>
       </footer>
