--- a/new_project.html
+++ b/new_project.html
@@ -61,7 +61,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                         </li>
                         <li class="rd-nav-item"><a class="rd-nav-link" href="index.html">Sitio Oficial</a>
                         </li>
-                        <li class="rd-nav-item"><a class="button  contact_button"  href="contactos.html">Contáctenos</a>
+                        <li class="rd-nav-item"><a class="button  contact_button"  href="#contacto">Contáctenos</a>
                         </li>
                       </ul>
                     </div>
@@ -80,10 +80,9 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
               <div class="container">
                 <div class="row">
                   <div class="col-md-9 col-lg-7 offset-md-1 offset-xxl-0">
-                    <div style="background-color: rgba(23,33,118,0.6); padding: 15px" data-caption-animate="fadeInUp" data-caption-delay="100">
-                      <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Ofiplaza San Dionisio</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200"> Nuevo estilo de imágen empresarial</span></h1>
-                      <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Ubicada en Managua sobre Pista Sub Urbana</p>
-                      <div class="button-wrap-default" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button  contact_button" href="nosotros.html">Saber Mas</a></div>
+                     <div style="background-color: rgba(23,33,118,0.6); padding: 15px" data-caption-animate="fadeInUp" data-caption-delay="100">
+                      <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">ETAPA 2</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">Oficentro San Dionisio</span></h1>
+                      <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">EOPS 3 - Seguimos creciendo.</p>
                     </div>
                   </div>
                 </div>
@@ -96,9 +95,9 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <div class="row">
                   <div class="col-md-9 col-lg-7 offset-md-1 offset-xxl-0">
                     <div style="background-color: rgba(23,33,118,0.6); padding: 15px" data-caption-animate="fadeInUp" data-caption-delay="100">
-                      <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Desarrollo del Proyecto</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">oficinas y comercio</span></h1>
-                      <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Contrucción con los mas altos estandares.</p>
-                      <div class="button-wrap-default" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button  contact_button" href="desarrollo.html">Saber Mas</a></div>
+                      <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Desarrollo del Proyecto</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">food court y comercio</span></h1>
+                      <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Desarrollo de un nuevo centro comercial.</p>
+                      <div class="button-wrap-default" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button  contact_button" href="desarrollo_eops3.html">Saber Mas</a></div>
                     </div>
                   </div>
                 </div>
@@ -111,9 +110,8 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <div class="row">
                   <div class="col-md-9 col-lg-7 offset-md-1 offset-xxl-0">
                     <div style="background-color: rgba(23,33,118,0.6); padding: 15px" data-caption-animate="fadeInUp" data-caption-delay="100">
-                      <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">ETAPA 3</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200">Oficentro San Dionisio</span></h1>
-                      <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">EOPS 3 - Nuevo centro comercial.</p>
-                      <div class="button-wrap-default" data-caption-animate="fadeInUp" data-caption-delay="450"><a class="button  contact_button" href="new_project.html">Saber Mas</a></div>
+                      <h1><span class="d-block" data-caption-animate="fadeInUp" data-caption-delay="100">Ofiplaza San Dionisio</span><span class="d-block text-light" data-caption-animate="fadeInUp" data-caption-delay="200"> Nuevo estilo de imágen empresarial</span></h1>
+                      <p class="lead" data-caption-animate="fadeInUp" data-caption-delay="350">Un nuevo estilo de imagen que marcará tu empresa</p>
                     </div>
                   </div>
                 </div>
@@ -141,8 +139,17 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <div class="novi-icon icon-index">
                   <img src="images/svg/Imagenes-e-Iconos-05.svg">
                 </div>
-                <h5 class="title">Pensamos como usted</h5>
-                <p class="text">Porque sabemos lo importante que es para usted hacer crecer su negocio, Ofiplaza San Dionisio fue diseñado para brindarle las comodidades necesarias. La estratégica distribución de sus espacios lo convierte en la opción ideal para oficinas administrativas y puntos de comercio.</p>
+                <h5 class="title">Crezca junto a nosotros</h5>
+                <p class="text">
+                  Nuestras áreas para oficinas y módulos comerciales son una excelente
+                  opción para tu negocio, tienda de conveniencia, boutique o tu emprendimiento,
+                  con una área de food court ubicadas sobre la pista sub urbana, es sin duda
+                  una oportunidad que no puedes dejar pasar.<br>
+                  Con nuestra nueva zona de food court, Oficentro San Dionisio
+                  representa una propuesta completamente atractiva para tus
+                  clientes, brindándote un espacio físico de calidad a un valor
+                  accesible para todo tipo empresas.
+                 </p>
               </div>
             </div>
             <div class="verticalLine col-md-1  wow fadeInUp" data-wow-delay="0.2s" >
@@ -150,10 +157,18 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
             <div class="col-md-3 wow fadeInUp" data-wow-delay="0.2s">
               <div class="box-icon-2">
                 <div class="novi-icon icon-index">
-                  <img src="images/svg/Imagenes-e-Iconos-06.svg">
+                  <img src="images/svg/Imagenes-e-Iconos-27.svg">
                 </div>
-                <h5 class="title">Moderno y espacioso</h5>
-                <p class="text">Oficentro San Dionisio brindará espacios que pueden ser utilizados para oficinas de trabajo y centros de recreación ubicados estratégicamente en una área que cuenta con centros educativos, universidades, comercios, restaurantes, salones de belleza, tiendas etc.</p>
+                <h5 class="title">Pensamos como usted</h5>
+                <p class="text"> Creemos firmemente en las oportunidades de crecimiento económico, es
+                  por eso que san dionisio es el lugar
+                  ideal para proyectar su empresa,
+                  negocio o comercio.<br>
+                  La estratégica distribución de sus
+                  espacios lo convierte en la opción
+                  ideal para montar desde oficinas
+                  administrativas hasta puntos de
+                  comercio.</p>
               </div>
             </div>
             <div class="verticalLine col-md-1  wow fadeInUp" data-wow-delay="0.4s" >
@@ -161,10 +176,16 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
             <div class="col wow fadeInUp" data-wow-delay="0.4s">
               <div class="box-icon-2">
                 <div class="novi-icon icon-index">
-                  <img src="images/svg/Imagenes-e-Iconos-07.svg">
+                  <img src="images/svg/Imagenes-e-Iconos-26.svg">
                 </div>
-                <h5 class="title">Su Nuevo Punto de Negocios</h5>
-                <p class="text">Ubicado al costado norte de la pista sub urbana, con alto flujo vehicular. Cuenta además con vigilancia las 24 horas, pozo propio de agua potable, más de 240 espacios de estacionamientos, ascensores y 3 accesos vehiculares.</p>
+                <h5 class="title">Tenemos lo que necesitas</h5>
+                <p class="text">Oficentro San Dionisio define un nuevo estilo de imagen
+                  empresarial en el suroeste de la capital de Managua.
+                  Nuestros espacios pueden ser utilizados para oficinas de
+                  trabajo, centros de recreación, dentro de un área cercana
+                  que cuenta con centros educativos, universidades, comercios,
+                  restaurantes, salones de belleza, tiendas y cualquier tipo
+                  de negocio. Sin duda alguna es un verdadero plus.</p>
               </div>
             </div>
           </div>
@@ -178,21 +199,25 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
           <div class="row">
             <div class="col-md-6 wow fadeInLeft">
               <div class="section-lg section-lg-top-100" style="filter: drop-shadow(0 2px 5px rgba(0, 0, 0, 0.7)); ">
-                <h2 class="title-icon title-icon-2"><span style="color: white">Módulos <br><span class="text-light" style="color: white;">Comerciales y Oficinas</span></span></h2>
-                <p class="big"  style="color: white">Módulos para Renta, Ofiplaza San Dionisio, cuenta con 2 plantas: primer piso, segundo piso, cuenta tambien con vistas panorámicas y cuenta con un amplio parqueo para la comodidad de los clientes, y parqueo en el entorno inmediato de los módulos para nuestros arrendantes.</p>
+                <h2 class="title-icon title-icon-2"><span style="color: white">Módulos <br><span class="text-light" style="color: white;">Comerciales y food court</span></span></h2>
+                <p class="big"  style="color: white"><br>
+                  Porque sabemos lo importante que es
+                  para usted hacer crecer su negocio,
+                  Oficentro San dionisio fue diseñado
+                  para brindarle las comodidades necesarias para su proyecto.</p>
 
-                <p class="big"  style="color: white">Cada piso tiene un espacio para la ubicación de módulos categorizados en: tiendas en general, restaurantesm heladeria, entre otros.
-                Módulos comerciales desde 40m² de área rentable.</p>
-
-                <p class="big"  style="color: white">Oficinas desde 141m² de área rentable, parqueos en semisótano con sistema de elevadores.</p>
-                  <div class="group-sm group-wrap-2" style="float: right; margin-bottom: 10px;"><a class="button  contact_button" href="contactos.html">Contáctenos</a>
+                <p class="big"  style="color: white">
+                  Ubicado al lado norte de la pista sub urbana, posee la gran
+                  ventaja del flujo vehicular, con una hermosa vista hacia el
+                  lago de Managua. Cuenta además con vigilancia las 24 horas,
+                  pozo propio de agua potable, más de 240 espacios de estacionamientos, ascensores y 3 accesos vehiculares.</p>
+                  <div class="group-sm group-wrap-2" style="float: right; margin-bottom: 10px;"><a class="button  contact_button " href="#contacto">Contáctenos</a>
                 </div>
               </div>
             </div>
             <div class="col-md-6 wow fadeInLeft align-self-center d-flex justify-content-center" style="padding-bottom: 15px;">
-              <div class="box-image-item box-image-video bg-image novi-background" style="width: 80%; height: 100%; background-image: url(images/index-874x534.jpg)">
-                <a class="icon novi-icon fa fa-caret-right" href="https://www.youtube.com/watch?v=qSXMxuE-RGU" data-lightgallery="item"></a>
-              </div>
+              <div class="box-image-item2" style="width:90%; height: 90%; background-image: url(images/eops_3/3-10-01.jpg)">
+               </div>
             </div>
           </div>
         </div>
@@ -208,7 +233,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
               
               <p><h1>¡Reserva tu espacio</h1></p>
               <h1>hoy mismo!</h1>
-              <a class="button contact_button" href="contactos.html">Contáctenos</a>
+              <a class="button contact_button" href="#contacto">Contáctenos</a>
             </div>
           </div>
         </div>
@@ -216,7 +241,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
       </section>
 
       <!--Info Contact-->
-       <section class="section section-md">
+       <section class="section section-md" id="contacto">
         <div class="container">
           <h2>Contactos</h2>
           <div class="row row-40">
@@ -226,21 +251,29 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 <div class="group-item">
                   <dl class="list-terms-2">
                     <dt>Teléfono:</dt>
-                    <dd><a href="tel:#">+(505) 1234 1234</a></dd>
+                    <dd><a href="tel:+(505)89415700">+(505) 8941-5700</a></dd> 
+
                   </dl>
                   <dl class="list-terms-2">
                     <dt>Fax:</dt>
-                    <dd><a href="tel:#">+(505) 1234 1234</a></dd>
-                  </dl><a class="d-inline-block font-weight-bold big link-underline" href="mailto:#">cuenta_correo@email.com</a>
+                    <dd><a href="tel:+(505)85461546">(505) 8546-1546</a></dd>
+                  </dl><a class="d-inline-block big link-underline" href="mailto:ventas@infodesarrollos.com">ventas@infodesarrollos.com</a>
                 </div>
                 <div class="group-item">
                   <ul class="list list-0">
                     <li class="text-secondary">Rotonda Universitaria <br>300 vrs Sur, <br>Pista Sub Urbana</li>
-                    <li>Lunes a viernes: 8:00 AM - 5:00 PM</li>
                   </ul>
                 </div>
               </div>
-              
+              <!--Please, add the data attribute data-key="YOUR_API_KEY" in order to insert your own API key for the Google map.-->
+              <!--Please note that YOUR_API_KEY should replaced with your key.-->
+              <!--Example: <div class="google-map-container" data-key="YOUR_API_KEY">-->
+              <div class="google-map-container google-map-container-2" data-center="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-zoom="5" data-icon="images/gmap_marker.png" data-icon-active="images/gmap_marker_active.png" data-styles="[{&quot;featureType&quot;:&quot;landscape&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:60}]},{&quot;featureType&quot;:&quot;road.local&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;lightness&quot;:40},{&quot;visibility&quot;:&quot;on&quot;}]},{&quot;featureType&quot;:&quot;transit&quot;,&quot;stylers&quot;:[{&quot;saturation&quot;:-100},{&quot;visibility&quot;:&quot;simplified&quot;}]},{&quot;featureType&quot;:&quot;administrative.province&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;water&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;on&quot;},{&quot;lightness&quot;:30}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#ef8c25&quot;},{&quot;lightness&quot;:40}]},{&quot;featureType&quot;:&quot;road.highway&quot;,&quot;elementType&quot;:&quot;geometry.stroke&quot;,&quot;stylers&quot;:[{&quot;visibility&quot;:&quot;off&quot;}]},{&quot;featureType&quot;:&quot;poi.park&quot;,&quot;elementType&quot;:&quot;geometry.fill&quot;,&quot;stylers&quot;:[{&quot;color&quot;:&quot;#b6c54c&quot;},{&quot;lightness&quot;:40},{&quot;saturation&quot;:-40}]},{}]">
+                <div class="google-map"></div>
+                <ul class="google-map-markers">
+                  <li data-location="9870 St Vincent Place, Glasgow, DC 45 Fr 45." data-description="9870 St Vincent Place, Glasgow"></li>
+                </ul>
+              </div>
             </div>
             <div class="col-md-10 col-lg-6">
               <h5>Escribanos</h5>
