--- a/nosotros.html
+++ b/nosotros.html
@@ -124,7 +124,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 </div>
                 <div class="unit-body">
                   <h5 class="title">Verdad</h5>
-                  <div class="content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam a fermentum turpis. Nulla metus diam, feugiat ac lectus vitae, tempus porttitor sem. Vestibulum non lacus vulputate, placerat ligula ut, dignissim tortor.</div>
+                  <div class="content"></div>
                 </div>
               </div>
             </div>
@@ -135,7 +135,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 </div>
                 <div class="unit-body">
                   <h5 class="title">Integridad</h5>
-                  <div class="content">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+                  <div class="content"></div>
                 </div>
               </div>
             </div>
@@ -146,7 +146,7 @@ Para una experiencia de navegación más rápida y segura, actualice gratis hoy.
                 </div>
                 <div class="unit-body">
                   <h5 class="title">Onestidad</h5>
-                  <div class="content">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit.</div>
+                  <div class="content"></div>
                 </div>
               </div>
             </div>
